[PORT] Compilation fixes for 1.20.4